# hbim-open-api-client

./: README.md  __init__.py  pyproject.toml  teste.py
archpath/: __init__.py  blender_manifest.toml
hbim_open_api_client/: __init__.py
hbim_open_api_client/api/default/: create_cadastro_cadastros_post.py  create_diagnostico_danos_diagnosticodano_post.py  create_edificacao_edificacoes_post.py  create_evento_evento_post.py  create_geometriadano_geometriadano_post.py  create_relacao_danos_relacao_danos_post.py  create_relacao_eventos_relacao_eventos_post.py  create_tipo_dano_tipo_dano_post.py  create_user_users_post.py  delete_cadastro_cadastros_id_cad_delete.py  delete_diagnostico_diagnosticodano_id_diag_delete.py  delete_edificacao_edificacoes_id_edif_delete.py  delete_evento_evento_id_evento_delete.py  delete_geometria_dano_geometriadano_id_geom_delete.py  delete_relacao_danos_relacao_danos_id_relac_delete.py  (+24 more)
hbim_open_api_client/models/: __init__.py  body_up_file_upload_file_post.py  cadastro_list.py  cadastro_public.py  cadastro_schema.py  diagnostico_list.py  diagnostico_public.py  diagnostico_schema.py  edificacao_list.py  edificacao_public.py  edificacao_schema.py  evento_list.py  evento_public.py  evento_schema.py  geometria_list.py  geometria_public.py  geometria_schema.py  relacao_danos_list.py  relacao_danos_public.py  relacao_danos_schema.py  relacao_diagnostico_evento_list.py  relacao_diagnostico_evento_public.py  relacao_diagnostico_evento_schema.py  tipo_dano_list.py  tipo_dano_public.py  tipo_dano_schema.py  user_list.py  user_public.py  user_schema.py
